[package]
name = "vault-rs"
version = "0.1.0"
authors = ["Yong Wen Chua <lawliet89@users.noreply.github.com>"]
edition = "2018"

[dependencies]
base64 = "0.10"
failure = { version = "0.1.5", features=["backtrace"] }
reqwest = "0.9.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
url = "1.7.2"

[dev-dependencies]
uuid = "0.8"
