[package]
name = "vault-rs"
version = "0.2.0"
authors = ["Yong Wen Chua <lawliet89@users.noreply.github.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.24"
base64 = "0.12"
failure = { version = "0.1.5", features=["backtrace"] }
futures = "0.3.4"
reqwest = { version = "0.10", features=["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
url = "2.1"

[dev-dependencies]
tokio = { version = "0.3", features=["macros", "rt-threaded"] }
uuid = { version = "0.8", features=["v4"] }
