[package]
name = "vault-rs"
version = "0.3.0"
authors = ["Yong Wen Chua <lawliet89@users.noreply.github.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
base64 = "0.13"
failure = { version = "0.1", features=["backtrace"] }
futures = "0.3"
reqwest = { version = "0.11", features=["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
url = "2.2"

[dev-dependencies]
tokio = { version = "1.0", features=["macros", "rt-multi-thread"] }
uuid = { version = "0.8", features=["v4"] }
